--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="container">
             <div class="topbar-utils">
                 <img class="gaming-cert" src="/images/gaming-certified.svg" alt="Gaming Labs Certified">
-           <!--     <div class="language-switcher">
+                <div class="language-switcher">
                     <a href="index-en.html" class="lang en">EN</a>
                     <span class="lang zh active">中文</span>
-                </div>-->
+                </div>
             </div>
 
             <div class="logo">
